<resources>
    <string name="app_name">HWWeek2Day4</string>
    <string name="start_data_entry_activity_for_result">StartActivityForResult</string>
    <string name="user_name">Name</string>
    <string name="user_address">Address</string>
    <string name="user_city">City</string>
    <string name="user_state">State</string>
    <string name="user_zip_code">Zipode</string>
    <string name="user_phone_number">Phone Number</string>
    <string name="user_email_address">Email Address</string>


</resources>
