<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DataEntryActivity">



    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_font_size"
        android:textColor="#33D6FF"
        android:textStyle="italic"
        android:hint="@string/user_name"/>

    <EditText
        android:id="@+id/etUserAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_font_size"
        android:textColor="#33D6FF"
        android:textStyle="italic"
        android:hint="@string/user_address"/>


    <EditText
        android:id="@+id/etUserCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_font_size"
        android:textColor="#33D6FF"
        android:textStyle="italic"
        android:hint="@string/user_city"/>


    <EditText
        android:id="@+id/etUserState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_font_size"
        android:textColor="#33D6FF"
        android:textStyle="italic"
        android:hint="@string/user_state"/>

    <EditText
        android:id="@+id/etUserZipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_font_size"
        android:textColor="#33D6FF"
        android:textStyle="italic"
        android:hint="@string/user_zip_code"/>

    <EditText
        android:id="@+id/etUserPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_font_size"
        android:textColor="#33D6FF"
        android:textStyle="italic"
        android:hint="@string/user_phone_number"/>


    <EditText
        android:id="@+id/etUserEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/standard_font_size"
        android:textColor="#33D6FF"
        android:textStyle="italic"
        android:hint="@string/user_email_address"/>



    <Button
        android:id="@+id/btnSendResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SEND RESULT"
        android:onClick="onClickDataEntryActivity"/>



</LinearLayout>